--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Added this meta tag 04/07/2018 -->
     <meta name="viewport" content="user-scalable=no,width=device-width">
     <link href="rabbit-health.css" rel="stylesheet" type="text/css">
+    <meta chrset="UTF-8">
     <title>Rabbit Trap</title>
 
 
