--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="pl">
 
 <head>
 
     <!-- Added this meta tag 04/07/2018 -->
+    <meta charset="UTF-8">
     <meta name="viewport" content="user-scalable=no,width=device-width">
     <link href="rabbit-health.css" rel="stylesheet" type="text/css">
-    <meta chrset="UTF-8">
     <title>Rabbit Trap</title>
 
 
@@ -15,22 +15,36 @@
 
 <body>
 
+
+
     <!-- Added a menu to navigate projects from the main page -->
+
     <div id="menu">
-        <p></p>
+        <p>Diety do Odblokowania:</p>
+
+        <p>Dieta wielowarzywna</p>
+        <p>Dieta śródziemnomorska</p>
+        <p>Dieta sirtfood</p>
+        <p>Dieta koktajlowa</p>
+        <p>Dieta Błonnikowa</p>
+
         <div id="menu-list">
-            <br>
-            <!-- <a href="rabbit-trap.html?01">part1</a>
-            <a href="rabbit-trap.html?02">part2</a>
-            <a href="rabbit-trap.html?03">part3</a>
-            <a href="rabbit-trap.html?04">part4</a>
-            <a href="rabbit-trap.html?05">part5</a>
-            <a href="rabbit-trap.html?06">part6</a>
+
+            <!-- <br>
+            <a>Dieta wielowarzywna</a>
+            <a>Dieta śródziemnomorska</a>
+            <a>Dieta sirtfood </a>
+            <a>Dieta koktajlowa</a>
+            <a>Dieta błonnikowa:</a> -->
+            <!-- <a href="rabbit-trap.html?06">part6</a>
             <a href="rabbit-trap.html?07">part7</a> -->
         </div>
     </div>
 
-    <canvas></canvas>
+    <canvas> 
+       
+    </canvas>
+
 
     <!-- Since Rabbit Trap is a multi-part series and I didn't feel like writing
     html and css for every single part, I decided to dynamically add the appropriate
